Fix experience date bug on small devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -64,10 +64,10 @@ h1.header {
     content: "";
     top: 5px; }
 
-@media (max-width: 945px) {
+@media (max-width: 992px) {
   .timeline .event::before {
     left: 0.5px;
-    top: 20px;
+    top: 57px;
     min-width: 0;
     font-size: 13px; }
   .timeline h3 { font-size: 16px; }
@@ -78,17 +78,12 @@ h1.header {
     font-size: 16px }
 }
 
-@media (max-width: 768px) {
-  .timeline .event::before {
-    left: 0.5px;
-    top: 20px;
-    min-width: 0;
-    font-size: 13px; }
-  .timeline .event:nth-child(1)::before,
-  .timeline .event:nth-child(3)::before,
-  .timeline .event:nth-child(5)::before { top: 38px; }
-  .timeline h3 { font-size: 16px; }
-  .timeline p { padding-top: 20px; }
+@media (max-width: 329px) {
+  .timeline .event:nth-child(3)::before { top: 81px; }
+}
+
+@media (max-width: 345px) {
+  .timeline .event:nth-child(2)::before { top: 81px; }
 }
 
 #skills { padding-bottom: 30px; }
